--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner ni lovey.jpg')">
 		<div class="heading">
 			<h1>Hamima M. Capunol</h1>
-			  <p>A diligent BSCS student with a creative side, I delve into the worlds of graphic design, photography, and freelancing. Balancing the complexities of computer science studies with a passion for visual arts, I strive to excel as a versatile professional.</p>
+			  <p>A dedicated BSCS student concurrently exploring the realms of graphic design, photography, and freelancing, blending technical knowledge with creative pursuits.</p>
 			<h3 class="cd-headline clip is-full-width">
 				<!-- <span>Lorem ipsum dolor sit amet </span> -->
 				<span class="cd-words-wrapper">
