--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@
                         <!-- <a href="#">Faq</a> -->
                         <a href="#contact">Contact</a>
                     </p>
-                    <p class="footer-company-name">All Rights Reserved. &copy; <span id="currentYear"></span> <a style="color:#dc3545;font-weight: 500;font-family: 'Bricolage Grotesque', sans-serif;" href="#">Hamima</a> Made with 💖:
-                        <a style="color:#dc3545;font-weight: 500;font-family: 'Bricolage Grotesque', sans-serif;" href="https://html.design/">DH</a></p>
+                    <center><p class="footer-company-name">All Rights Reserved. &copy; <span id="currentYear"></span> <a style="color:#dc3545;font-weight: 500;font-family: 'Bricolage Grotesque', sans-serif;" href="#">Hamima</a> Made with 💖:
+                        <a style="color:#dc3545;font-weight: 500;font-family: 'Bricolage Grotesque', sans-serif;" href="https://html.design/">DH</a></p></center>
                 </div>
             </div>
         </div><!-- end container -->
